# Adaptive-Retrieval-Path-Optimization

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-dev.cmd
.github/workflows/: ci.yml
data/: arpo-openalex-corpus.jsonl  arpo-openalex-queries.jsonl
docs/: architecture.md  internal-workings.md  production-readiness.md  setup-guide.md
examples/: corpus.jsonl  queries.jsonl
experiments/: README.md  claim-study.openalex.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts
frontend/src/hooks/: useDebouncedValue.ts
frontend/src/layouts/: WorkspaceLayout.tsx
frontend/src/store/: AppProvider.tsx  app-store.ts
frontend/src/types/: api.ts
frontend/src/utils/: corpora.ts  feed-simulator.ts  format.ts  graph-layout.ts
scripts/: start-dev.ps1
src/arpo/: __init__.py  cli.py  corpus_cli.py  corpus_quality.py  eval_cli.py  harvest_cli.py  index_cli.py  ingest_cli.py  models.py  pipeline.py  research_cli.py  s2orc_cli.py  text.py
src/arpo/analysis/: __init__.py  query_complexity.py
src/arpo/api/: __init__.py  main.py  runtime.py  schemas.py
src/arpo/datasets/: __init__.py  openalex.py  s2orc.py
src/arpo/evaluation/: __init__.py  benchmarks.py  claim_study.py  metrics.py  runner.py  statistics.py  variants.py
src/arpo/evidence/: __init__.py  graph.py
src/arpo/generation/: __init__.py  (+1 more)
tests/: test_api_endpoints.py  test_api_hardening.py  test_ingestion.py  test_openalex_harvest.py  test_pipeline.py  test_research_claims.py  test_s2orc_ingestion.py  test_vector_index.py
(+36 files in other folders)
