[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arpo"
version = "0.1.0"
description = "Adaptive Retrieval Path Optimization using Dynamic Query Graphs for multi-hop information retrieval."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ARPO Research Team" }
]
keywords = [
  "information-retrieval",
  "rag",
  "multi-hop-retrieval",
  "query-graphs",
  "adaptive-retrieval"
]
dependencies = [
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.27"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.27"
]
ml = [
  "sentence-transformers>=3.0",
  "spacy>=3.7",
  "networkx>=3.2",
  "rank-bm25>=0.2.2"
]
ingestion = [
  "pypdf>=4.0"
]
eval = [
  "beir>=2.0.0"
]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.5"
]
all = [
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.27",
  "sentence-transformers>=3.0",
  "spacy>=3.7",
  "networkx>=3.2",
  "rank-bm25>=0.2.2",
  "pypdf>=4.0",
  "beir>=2.0.0",
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
arpo = "arpo.cli:main"
arpo-evaluate = "arpo.eval_cli:main"
arpo-harvest = "arpo.harvest_cli:main"
arpo-ingest = "arpo.ingest_cli:main"
arpo-index = "arpo.index_cli:main"
arpo-corpus = "arpo.corpus_cli:main"
arpo-research = "arpo.research_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
